# temp

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BinaryTreeSearhHeader.cpp  BinaryTreeSearhHeader.h  CMakeCache.txt  CMakeLists.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ir.txt  main.cpp  main2.cpp  myapp.vcxproj  myapp.vcxproj.filters  point.h  rgb.txt  temp.txt
